--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.21.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pdf": "^0.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
